// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CUnit decorators should add CUnit metadata to a class when decorating a method with @CUnit 1`] = `
Array [
  DecoratorFactory {
    "name": "default",
  },
]
`;

exports[`DecoratorFactory decorators 1`] = `
Array [
  DecoratorFactory {
    "name": undefined,
    "options": undefined,
  },
  DecoratorFactory {
    "id": [Function],
    "type": "EntityTypeOrm",
  },
]
`;

exports[`DecoratorFactory decorators 2`] = `
Array [
  DecoratorFactory {},
  DecoratorFactory {
    "id": [Function],
    "type": "EntityTypeOrm",
  },
]
`;
